AUTOMAKE_OPTIONS = subdir-objects

AM_CPPFLAGS=-I../../common/include -I../../fakejbus -I../misc -I../

noinst_LTLIBRARIES=libapps.la

libapps_la_SOURCES= \
    NetworkService.cc \
    NetworkService.hh \
    FirmwareService.cc \
    FirmwareService.hh \
    PairService.cc \
    PairService.hh \
    RuntimeConfService.cc \
    RuntimeConfService.hh \
    SysConfService.cc \
    SysConfService.hh \
    MiscService.cc \
    MiscService.hh \
    MenuListPiece.cc \
    MenuListPiece.hh \
    launcher/LauncherActivity.cc \
    launcher/LauncherActivity.hh \
    settings/SettingWifiListActivity.cc \
    settings/SettingWifiListActivity.hh \
    settings/SettingWifiPasswordActivity.cc \
    settings/SettingWifiPasswordActivity.hh \
    settings/WifiListPiece.cc \
    settings/WifiListPiece.hh \
    settings/SettingLanguageActivity.cc \
    settings/SettingLanguageActivity.hh \
    settings/LanguageListPiece.cc \
    settings/LanguageListPiece.hh \
    settings/SettingMainActivity.cc \
    settings/SettingMainActivity.hh \
    settings/SettingCheckNetworkActivity.cc \
    settings/SettingCheckNetworkActivity.hh \
    settings/SettingCheckNetworkPromptActivity.cc \
    settings/SettingCheckNetworkPromptActivity.hh \
    settings/SettingFirmwareActivity.cc \
    settings/SettingFirmwareActivity.hh \
    settings/SettingPairActivity.cc \
    settings/SettingPairActivity.hh \
    settings/SettingWifiActivity.cc \
    settings/SettingWifiActivity.hh \
    settings/SettingHotspotActivity.cc \
    settings/SettingHotspotActivity.hh \
    settings/SettingTimeActivity.cc \
    settings/SettingTimeActivity.hh \
    settings/SettingTimeZoneActivity.cc \
    settings/SettingTimeZoneActivity.hh \
    settings/SettingFunctionActivity.cc \
    settings/SettingFunctionActivity.hh \
    settings/SettingScreenActivity.cc \
    settings/SettingScreenActivity.hh \
    settings/SettingScreenLockTimeActivity.cc \
    settings/SettingScreenLockTimeActivity.hh \
    settings/SettingResetActivity.cc \
    settings/SettingResetActivity.hh \
    settings/SettingFtpServerActivity.cc \
    settings/SettingFtpServerActivity.hh \
    settings/SettingCheckFtpActivity.cc \
    settings/SettingCheckFtpActivity.hh \
    settings/SettingTransferProtocolActivity.cc \
    settings/SettingTransferProtocolActivity.hh \
    settings/SettingAboutActivity.cc \
    settings/SettingAboutActivity.hh

