nobase_pkgdata_DATA= \
    fonts/unifont_160_50.upf \
    fonts/SourceHanSans-Normal.ttc \
    images/arrow-back.png \
    images/arrow-left.png \
    images/arrow-right.png \
    images/arrow-up.png \
    images/arrow-down.png \
    images/icon-ok.png \
    images/icon-cancel.png \
    images/icon-retry.png \
    images/icon-camera.png \
    images/icon-camera-usb.png \
    images/icon-camera-wlan.png \
    images/icon-cloud.png \
    images/icon-ftp.png \
    images/icon-empty.png \
    images/icon-enter.png \
    images/icon-setting.png \
    images/icon-upload.png \
    images/loading-nm.gif \
    images/loading-sm.gif \
    images/loading-xm.gif \
    images/logo-joopic.png \
    images/mark-check.png \
    images/cbplus.png \
    images/ftp.png \
    images/task-finished.png \
    images/splash/joopic.gif \
    images/status-bar/4g-0.png \
    images/status-bar/4g-1.png \
    images/status-bar/4g-2.png \
    images/status-bar/4g-3.png \
    images/status-bar/4g-4.png \
    images/status-bar/4g-5.png \
    images/status-bar/battery-0.png \
    images/status-bar/battery-1.png \
    images/status-bar/battery-2.png \
    images/status-bar/battery-3.png \
    images/status-bar/battery-4.png \
    images/status-bar/battery-5.png \
    images/status-bar/ble-dev-none.png \
    images/status-bar/ble-dev-ptz.png \
    images/status-bar/ble-dev-lmeter.png \
    images/status-bar/ble-dev-unknown.png \
    images/status-bar/wifi-0.png \
    images/status-bar/wifi-1.png \
    images/status-bar/wifi-2.png \
    images/status-bar/wifi-3.png \
    images/status-bar/wifi-4.png \
    images/status-bar/wifi-hotspot.png \
    images/check-network/checking-network.png \
    images/select-wifi/wifi-0.png \
    images/select-wifi/wifi-1.png \
    images/select-wifi/wifi-2.png \
    images/select-wifi/wifi-3.png \
    images/select-wifi/wifi-4.png \
    images/select-wifi/wifi-lock.png \
    images/select-wifi/wifi-logo.png \
    images/soft-keyboard/caps-off.png \
    images/soft-keyboard/caps-on.png \
    images/soft-keyboard/delete.png \
    images/soft-keyboard/done.png \
    images/soft-keyboard/digit-0.png \
    images/soft-keyboard/digit-1.png \
    images/soft-keyboard/digit-2.png \
    images/soft-keyboard/digit-3.png \
    images/soft-keyboard/digit-4.png \
    images/soft-keyboard/digit-5.png \
    images/soft-keyboard/digit-6.png \
    images/soft-keyboard/digit-7.png \
    images/soft-keyboard/digit-8.png \
    images/soft-keyboard/digit-9.png \
    images/soft-keyboard/go-symbols.png \
    images/soft-keyboard/return-digits.png \
    images/soft-keyboard/symbol-1.png \
    images/soft-keyboard/symbol-2.png \
    images/soft-keyboard/symbol-3.png \
    images/soft-keyboard/symbol-4.png \
    images/soft-keyboard/symbol-5.png \
    images/soft-keyboard/symbol-6.png \
    images/soft-keyboard/symbol-7.png \
    images/soft-keyboard/symbol-8.png \
    images/soft-keyboard/symbol-9.png \
    images/launcher/icon-app-auto-upload.png \
    images/launcher/icon-app-live-push.png \
    images/launcher/icon-app-manual-upload.png \
    images/launcher/icon-app-remote-control-wlan.png \
    images/launcher/icon-app-remote-control-hotspot.png \
    images/launcher/icon-app-remote-control-cloud.png \
    images/launcher/icon-app-settings.png \
    images/launcher/icon-app-settings-wifi.png \
    images/launcher/icon-camera.png \
    images/launcher/icon-cloud.png \
    images/launcher/icon-ftp.png \
    images/screen-lock/0.png \
    images/screen-lock/1.png \
    images/screen-lock/2.png \
    images/screen-lock/3.png \
    images/screen-lock/4.png \
    images/screen-lock/5.png \
    images/screen-lock/6.png \
    images/screen-lock/7.png \
    images/screen-lock/8.png \
    images/screen-lock/9.png \
    images/screen-lock/del.png \
    images/screen-lock/bmpfont-digits.png \
    images/screen-lock/bmpfont-colon.png \
    images/screen-lock/bmpfont-space.png \
    images/screen-lock/battery.png \
    images/screen-lock/charging.png

