AM_CPPFLAGS=-I../include

noinst_LTLIBRARIES=libcommon.la

libcommon_la_SOURCES= \
    Activity.cc \
    ActivityStack.cc \
    AsyncTask.cc \
    cJSON.c \
    ContentValues.cc \
    md5.c \
    MyGetText.cc \
    NCSActivity.cc \
    SQLiteCursor.cc \
    SQLiteDB.cc \
    StateMachine.cc \
    TransitionAnimationFinished.cc \
    TransitionHover.cc \
    TransitionNoInput.cc \
    TransitionStandStill.cc \
    utilities.c \
    utility.cc
