AM_CPPFLAGS=-I../include

noinst_LTLIBRARIES=libcommon.la

libcommon_la_SOURCES= \
    Activity.cc \
    ActivityStack.cc \
    AsyncTask.cc \
    ContentValues.cc \
    MyGetText.cc \
    NCSActivity.cc \
    SQLiteCursor.cc \
    SQLiteDB.cc \
    StateMachine.cc \
    TransitionAnimationFinished.cc \
    TransitionHover.cc \
    TransitionNoInput.cc \
    TransitionStandStill.cc \
    utility.cc \
    utilities.c \
    cJSON.c \
    md5.c
