AUTOMAKE_OPTIONS = subdir-objects

noinst_LTLIBRARIES = libsoftkeyboard.la

libsoftkeyboard_la_SOURCES = \
    ime.h \
    ime.c \
    common.h \
    common.c \
    en_kbd.c \
    num_kbd.c \
    pinyin_kbd.c \
    punct_kbd.c \
    softkeywindow.h \
    softkeywindow.c \
    tooltip.h \
    tooltip.c \
    resource.c \
    animate/animate.h \
    animate/animate_sence.c \
    animate/instruction.h \
    animate/my_debug.h \
    animate/p-code.c \
    animate/p-code.h \
    animate/timeline.c \
    animate/alpha_animate.c \
    animate/common_animates.c \
    animate/common_animates.h \
    ime-pti-en/mgpti.h \
    ime-pti-en/mgpti.c \
    ime-pti-en/mgpti_dict.c \
    ime-pti-en/mgpti_dict.h \
    ime-pti-en/mgpti_dict_ops.c \
    ime-pti-en/mgpti_dict_ops.h \
    ime-pti-en/mgpti_helper.c \
    ime-pti-en/mgpti_helper.h \
    ime-pti-en/mgpti_user_dict.c \
    ime-pti-en/mgpti_user_dict.h \
    ime-pinyin-zh/ime_zh_table.h \
    ime-pinyin-zh/ime_zh_table_pinyin.c \
    $(NULL)

EXTRA_DIST=240x320 320x240 480x272
